# AI_model_learning

./: .dockerignore  .gitignore  .pre-commit-config.yaml  20260428_cnn.ipynb  20260430.ipynb  20260507.ipynb  20260508.ipynb  20260511.ipynb  Dockerfile  README.md  docker-compose.yml  experiment_summary_20260511.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
archives/notebooks/: 20260430.ipynb
archives/scripts/: train_cifar100_cnn2.py  train_cifar100_cnn2_erasing.py  train_cifar100_cnn2_erasing_epoch100.py  train_cifar100_cnn2_lr1e2.py  train_cifar100_cnn2_lr1e4.py  train_cifar100_cnn2_random.py  train_cifar100_net4.py  train_cifar100_net4_erasing.py  train_cifar100_net4_erasing_epoch100.py  train_cifar100_net4_lr1e2.py  train_cifar100_net4_lr1e4.py  train_cifar100_net4_random.py
configs/: train.yaml
configs/callbacks/: model_checkpoint.yaml
configs/data/: cifar100.yaml
configs/experiment/: cifar100_alexnet.yaml  cifar100_alexnet_crop.yaml  cifar100_alexnet_sgd.yaml  cifar100_cnn2.yaml  cifar100_cnn2_crop.yaml  cifar100_cnn2_erasing.yaml  cifar100_cnn2_erasing_epoch100.yaml  cifar100_cnn2_random.yaml  cifar100_cnn2_random_lr1e2.yaml  cifar100_cnn2_random_lr1e4.yaml  cifar100_cnn2_random_sgd.yaml  cifar100_cnn2_sgd.yaml  cifar100_cnn2_test.yaml  cifar100_cnn3.yaml  cifar100_cnn3_sgd.yaml  cifar100_deit.yaml  cifar100_efficient.yaml  cifar100_efficient_random.yaml  cifar100_net4.yaml  cifar100_net4_crop.yaml  cifar100_net4_erasing.yaml  cifar100_net4_erasing_epoch100.yaml  cifar100_net4_random.yaml  cifar100_net4_random_lr1e2.yaml  cifar100_net4_random_lr1e4.yaml  cifar100_net4_random_sgd.yaml  cifar100_net4_sgd.yaml  cifar100_net4_test.yaml  cifar100_net5.yaml  cifar100_net5_sgd.yaml  cifar100_vit.yaml  cifar100_vit_random.yaml
notebooks/: 20260508.ipynb  20260511.ipynb
outputs/: experiment_summary_20260511.md
scripts/: train_cifar100_net4.py  train_cifar100_net4_erasing.py  train_cifar100_net4_erasing_epoch100.py  train_cifar100_net4_lr1e2.py  train_cifar100_net4_lr1e4.py  train_cifar100_net4_random.py
(+33 files in other folders)
