[project]
name = "ai-model-learning"
version = "0.1.0"
requires-python = ">=3.12"

[project.optional-dependencies]
dev = [
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

# ─── Ruff ───────────────────────────────────────────────
[tool.ruff]
target-version = "py312"
line-length = 100
exclude = ["archives/", ".venv/"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
]
ignore = [
    "E501",  # line-length は formatter に任せる
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

# ─── Mypy ───────────────────────────────────────────────
[tool.mypy]
python_version = "3.12"
files = ["src/"]
ignore_missing_imports = true   # torch/lightning にスタブなし
warn_unused_ignores = true
warn_return_any = true
