[project]
name = "ai-model-learning"
version = "0.1.0"
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

# ─── Ruff ───────────────────────────────────────────────
[tool.ruff]
target-version = "py311"
line-length = 100
exclude = ["archives/", ".venv/"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
]
ignore = [
    "E402",  # Module level import not at top of file (rootutils.setup_root() の後でインポート必要)
    "E501",  # line-length は formatter に任せる
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

# ─── Mypy ───────────────────────────────────────────────
[tool.mypy]
python_version = "3.11"
files = ["src/"]
explicit_package_bases = true
ignore_missing_imports = true   # torch/lightning にスタブなし
allow_untyped_defs = true       # 型注釈なし関数を許可（既存コードのため）
allow_incomplete_defs = true    # 不完全な型注釈を許可
warn_unused_ignores = false     # 不要な # type: ignore を警告しない
warn_return_any = false         # Any 戻り値を警告しない
